syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.keystore";
option java_outer_classname = "KeyStoreProto";
option objc_class_prefix = "KV";

package keystore;

service KeyStore {
  rpc put (PutRequest) returns (PutResponse) {};
  rpc get (GetRequest) returns (GetResponse) {};
  rpc getAllKeys (GetAllRequest) returns (stream KeyResponse) {};
}

message PutRequest {
	string key = 1;
	string value = 2;
}

message PutResponse {
	bool success = 1;
	string messageStatus = 2;
}

message GetRequest {
	string key = 1;
}

message GetResponse {
	string value = 1;
}

message GetAllRequest {}

message KeyResponse{
	string name = 1;
}